syntax = "proto3";

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

service AuthService {
  rpc getUser(GetUserRequest) returns (GetUserResponse);
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
  rpc login(LoginRequest) returns (LoginResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
}
